[package]
name = "platynui-server"
description = "JSON-RPC server facade for PlatynUI remote automation"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
