[package]
name = "platynui-xkb-util"
description = "XKB keymap utilities for PlatynUI — reverse lookup (char → keycode + modifiers)"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
xkbcommon = { version = "0.9", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
