[package]
name = "platynui-xpath"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pest = "2"
pest_derive = "2"
unicode-normalization = "0.1"
fancy-regex = "0.16.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
thiserror = "2"
url = "2"
smallvec = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Performance optimizations
string_cache = "0.9"
compact_str = "0.9"

[dev-dependencies]
 rstest = "0.26"
 criterion = "0.7"

[[bench]]
name = "xpath_benches"
harness = false
