[package]
name = "platynui-xpath"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pest = "2.8.2"
pest_derive = "2.8.2"
unicode-normalization = "0.1.24"
fancy-regex = "0.16.2"
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
] }
base64 = "0.22"
thiserror = "2.0"
url = "2.5.7"
smallvec = "1.15.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
string_cache = "0.9.0"
compact_str = "0.9.0"
lru = "0.12"

[dev-dependencies]
rstest = "0.26.1"
criterion = "0.7.0"

[[bench]]
name = "xpath_benches"
harness = false

[[bench]]
name = "performance_analysis"
harness = false

[[example]]
name = "platynui_xpath_repl"
path = "examples/repl.rs"

[[example]]
name = "platynui_xpath_simple"
path = "examples/simple.rs"
