[package]
name = "platynui-xpath"
description = "XPath 2.0-style evaluator and parser for PlatynUI UI automation"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
pest = "2.8"
pest_derive = "2.8"
unicode-normalization = "0.1"
fancy-regex = "0.16"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
base64 = "0.22"
thiserror = "2.0"
url = "2.5"
smallvec = "1.15"
tracing = { version = "0.1", default-features = false, features = ["std"] }
string_cache = "0.9"
compact_str = "0.9"
lru = "0.16"
itertools = "0.14"

[dev-dependencies]
rstest = "0.26"

[[example]]
name = "platynui_xpath_repl"
path = "examples/repl.rs"

[[example]]
name = "platynui_xpath_simple"
path = "examples/simple.rs"
